--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ li a {
   width: 50px;
   background-color: #ced4da;
   border-radius: 5px;
+  margin-right: 8px;
 }
 
 /* chungchi giai thuong */
