--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,5 +1,5 @@
 /* // Medium devices (tablets, 768px and up) */
-@media (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .name-li {
     display: none;
   }
